test/attr/ApplicationMain/attr_main_multi_file/main1.code
// This file is a part of the multi-file test driven by 'main2.code'.

// NB: No "-verify"--this file should parse successfully on its own.
// RUN: %target-language-frontend -typecheck -parse-as-library %s

@main // expected-error{{'main' attribute can only apply to one type in a module}}
class MyMain {
  static fn main() {
  }
}

fn hi() {}
